--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.1",
+    "chart.js": "^2.9.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-vis": "^1.11.7",
     "victory": "^35.0.9"
   },
   "scripts": {
