--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.x"
+    "node": "12.18.2",
+    "npm": "6.14.5"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
