--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-vis": "^1.11.7",
+    "serve": "^11.3.2",
     "victory": "^35.0.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+    }
   "eslintConfig": {
     "extends": "react-app"
   },
